# zed-httpclient

./: .gitignore  Cargo.toml  README.md  extension.toml
languages/http/: config.toml  highlights.scm
lsp/: Cargo.toml
lsp/src/: main.rs  parser.rs
src/: lib.rs
test/: .env  prod.env  test.env  test.http  test.response.http  test.response.txt
